--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ ul {
     top:5%;
     right:0%;
     background-color:black;
+    opacity:0.9;
     position: fixed;
     overflow:hidden;
     z-index:1;
